[package]
name = "rampart"
version = "0.1.1"
edition = "2021"
authors = ["Naotaka Nakane <n.nakane0219@gmail.com>"]
repository = "https://github.com/gtnao0219/rust-rampart"
description = "Rampart determines how intervals relate to each other."
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
